# internal/handler/http/user_handler.go
@@ -1,0 +1,44 @@
+package http
+
+import (
+	"strconv"
+
+	"github.com/gofiber/fiber/v2"
+
+	"github.com/jason2071/go-starter-kit-lite/internal/usecase"
+)
+
+func (h *Handler) ListUsers(c *fiber.Ctx) error {
+	page, _ := strconv.Atoi(c.Query("page", "1"))
+	pageSize, _ := strconv.Atoi(c.Query("page_size", "20"))
+
+	var isActive *bool
+	if rawIsActive := c.Query("is_active"); rawIsActive != "" {
+		value, err := strconv.ParseBool(rawIsActive)
+		if err != nil {
+			return usecase.NewError(
+				usecase.ErrValidation,
+				"INVALID_FILTER",
+				"is_active must be boolean",
+			)
+		}
+		isActive = &value
+	}
+
+	response, err := h.userService.ListUsers(
+		c.UserContext(),
+		usecase.ListUsersRequest{
+			Page:     page,
+			PageSize: pageSize,
+			Search:   c.Query("search"),
+			IsActive: isActive,
+			Sort:     c.Query("sort", "created_at"),
+			Order:    c.Query("order", "desc"),
+		},
+	)
+	if err != nil {
+		return err
+	}
+
+	return c.JSON(dataResponse{Success: true, Data: response})
+}
